--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -8,7 +8,15 @@
 <h1> Kurs Thymeleaf</h1>
 <p>Welcome</p>
 
+
     <p th:text="${car.getMark()}"></p>
     <p th:text="${car.getModel()}"></p>
+
+
+
+<tr th:each="car: ${cars}">
+    <td th:text="${car. mark}"/> <br>
+    <td th:text="${car. model}"/> <br>
+</tr>
 </body>
 </html>
